--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 authors = [
   { name="Emil Marinov", email="emil@intp.io" }
 ]
-description = "A quantum computing utility package."
+description = "A quantum information utility package."
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
