--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gav_quantum"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="Emil Marinov", email="emil@intp.io" }
 ]
@@ -21,3 +21,9 @@ license-files = ["LICEN[CS]E*"]
 [project.urls]
 Homepage = "https://github.com/grayalienventures/gav_quantum"
 Issues = "https://github.com/grayalienventures/gav_quantum/issues"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
