--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools >= 77.0.3", "numpy"]
+requires = ["setuptools >= 77.0.3", "numpy", "itertools"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "gav_quantum"
-version = "0.0.3"
+version = "0.0.4"
 authors = [
   { name="Emil Marinov", email="emil@intp.io" }
 ]
@@ -14,6 +14,10 @@ requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
+    "Topic :: Scientific/Engineering",
+    "Topic :: Scientific/Engineering :: Quantum Computing",
+    "Topic :: Scientific/Engineering :: Physics",
+    "Topic :: Scientific/Engineering :: Mathematics"
 ]
 license = "MIT"
 license-files = ["LICENSE"]
