--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 77.0.3", "numpy", "itertools"]
+requires = ["setuptools >= 77.0.3", "numpy"]
 build-backend = "setuptools.build_meta"
 
 [project]
